# leg

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile.bak  README.md  arm32-toolchain.cmake  device.dts  dump  dump-debug  dump-release  fmt.sh  kernel.ld  linker.ld  linker_user.ld  main.c  main.s  meson.build  neon.txt  qemu.sh
cmake/: embed_binary.cmake  write_disk.cmake
include/: boot.h  bswap.h  builtins.h  cpu.h  exceptions.h  gic.h  kmain.h  linker.h  logs.h  main.h  mandelbrot.h  math.h  memory.h  mmu.h  result.h  rtc.h  stdio.h  stdlib.h  string.h  string_data.h  syscall.h  types.h  uart.h  utils.h
include/fdt/: fdt.h  parser.h
include/kernel/: boot.h  bump.h  cpu.h  dtb.h  exceptions.h  fb.h  fonts.h  fs.h  fwcfg.h  gic.h  kmain.h  linker.h  llf.h  logs.h  mm.h  mmu.h  process.h  rng.h  rtc.h  scheduler.h  tty.h  uart.h  user_image.h
include/kernel/dev/: blk.h  fb.h  fwcfg.h  gic.h  kbd.h  memory.h  mmu.h  rng.h  rtc.h  uart.h  virtio.h
include/kernel/fdt/: dtb.h  fdt.h
include/kernel/mem/: alloc.h  bump.h  memory.h  mmu.h
include/libc/: builtins.h  cstring.h  display.h  math.h  stdio.h  stdlib.h  string.h  time.h
include/usr/: hash.h  mandelbrot.h  matrix.h
legfs/: llf.py  mkfs.py
scripts/: fmt.sh  sort_includes.py
src/: boot.c  boot.s  builtins.c  cpu.c  exceptions.c  gic.c  main.c  mandelbrot.c  math.c  memory.c  start.c  start.s  stdio.c  stdlib.c  string.c  string_data.c  uart.c  utils.c
src/fdt/: fdt.c  parser.c
src/kernel/: boot.c  boot.s  builtins.c  bump.c  context_switch.s  cpu.c  dtb.c  exceptions.c  fb.c  fs.c  fwcfg.c  gic.c  kmain.c  llf.c  logs.c  memory.c  mm.c  mmu.c  process.c  rng.c  rtc.c  scheduler.c  syscall.c  trampolines.s  tty.c  uart.c  utils.c
src/kernel/dev/: blk.c  fb.c  fwcfg.c  gic.c  kbd.c  memory.c  mmu.c  rng.c  rtc.c  uart.c  virtio.c
src/kernel/dev/fonts/: sans.c  serif.c
src/kernel/fdt/: dtb.c  fdt.c  parser.c
src/kernel/fonts/: sans.c  serif.c
src/kernel/mem/: alloc.c  bump.c  memory.c  mmu.c
src/libc/: builtins.c  cstring.c  eabi.s  math.c  result.c  start.c  stdio.c  stdlib.c  string.c  vec.c
src/usr/: CMakeLists.txt  hash.c  init.c  linker_user.ld  main.c  mandelbrot.c  mandelbrot.c.bak  matrix.c  start.c
